--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -30,7 +30,7 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .container {
   position: relative;
-  width: 100%;
+  width: 90%;
   max-width: 960px;
   margin: 0 auto;
   padding: 0 20px;
@@ -45,12 +45,12 @@
 /* For devices larger than 400px */
 @media (min-width: 400px) {
   .container {
-    width: 85%;
-    padding: 0; } }
-/* For devices larger than 550px */
-@media (min-width: 550px) {
+    width: 90%;
+    padding: 0px; } }
+/* For devices larger than 900px */
+@media (min-width: 900px) {
   .container {
-    width: 80%; }
+    width: 90%; }
 
   .column,
   .columns {
@@ -291,8 +291,8 @@ input[type="submit"].button-primary,
 input[type="reset"].button-primary,
 input[type="button"].button-primary {
   color: #FFF;
-  background-color: #33C3F0;
-  border-color: #33C3F0; }
+  background-color: #4268ff;
+  border-color: #4268ff; }
 
 .button.button-primary:hover,
 button.button-primary:hover,
@@ -305,8 +305,8 @@ input[type="submit"].button-primary:focus,
 input[type="reset"].button-primary:focus,
 input[type="button"].button-primary:focus {
   color: #FFF;
-  background-color: #1EAEDB;
-  border-color: #1EAEDB; }
+  background-color: #0021A5;
+  border-color: #0021A5; }
 
 /* Forms
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -355,7 +355,7 @@ input[type="url"]:focus,
 input[type="password"]:focus,
 textarea:focus,
 select:focus {
-  border: 1px solid #33C3F0;
+  border: 1px solid #FF4A00;
   outline: 0; }
 
 label,
