--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title></title>
-    <meta name="description" content="">
+    <title>{{ site.title }}</title>
+    <meta name="description" content="{{ site.description }}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- Place favicon.ico in the root directory -->
 
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/skeleton.css">
-    <link rel="stylesheet" href="css/main.css">
-    <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/normalize.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/skeleton.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
+    <script src="{{ site.baseurl }}/js/vendor/modernizr-2.8.3.min.js"></script>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -24,15 +24,21 @@
 <header>
     <input type="checkbox" id="navbar-checkbox" class="navbar-checkbox">
     <nav class="menu">
+        <div class="container">
+            <div class="row">
+                <div class="twelve columns">
         <a href="#" id="logo">Clinton Andrews</a>
         <ul>
-            <li{% if page.url == '/index.html' %} class="active" {% endif %}><a href="index.html">Home</a></li>
-            <li{% if page.url == '/projects.html' %} class="active" {% endif %}><a href="projects.html">Projects</a></li>
-            <li{% if page.url == '/resume.html' %} class="active" {% endif %}><a href="resume.html">Resume</a></li>
-            <li{% if page.url == '/blog.html' %} class="active" {% endif %}><a href="blog.html">Blog</a></li>
-            <li{% if page.url == '/contact.html' %} class="active" {% endif %}><a href="contact.html">Contact</a></li>
+            <li{% if page.url == '/index.html' %} class="active" {% endif %}><a href="{{ site.baseurl }}/index.html">Home</a></li>
+            <li{% if page.url == '/projects.html' %} class="active" {% endif %}><a href="{{ site.baseurl }}/projects.html">Projects</a></li>
+            <li{% if page.url == '/resume.html' %} class="active" {% endif %}><a href="{{ site.baseurl }}/resume.html">Resume</a></li>
+            <li{% if page.url == '/blog.html' %} class="active" {% endif %}><a href="{{ site.baseurl }}/blog.html">Blog</a></li>
+            <li{% if page.url == '/contact.html' %} class="active" {% endif %}><a href="{{ site.baseurl }}/contact.html">Contact</a></li>
         </ul>
 
         <label for="navbar-checkbox" class="navbar-handle"></label>
+                </div>
+            </div>
+        </div>
     </nav>
 </header>
