--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,10 @@
 ---
-layout: default
+layout: blog
 ---
-<div class="post">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
+<article>
+    <h3 class="post-title">{{ page.title }}</h3>
     <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
 
-  <article class="post-content">
     {{ content }}
-  </article>
-
-</div>
+</article>
