--- a/css/main.css
+++ b/css/main.css
@@ -26,12 +26,12 @@ body {
     .menu li:hover {
       border-bottom: 1px solid #FF4A00; } }
 .menu {
-  padding: 0.5em;
+  padding: 0.5em 0;
   min-height: 2em;
   color: #000; }
   .menu #logo {
     display: inline-block;
-    padding: .45em 1.1em;
+    padding: .45em 0em;
     margin: 0 .3em;
     color: #000;
     text-decoration: none; }
@@ -55,7 +55,7 @@ body {
     padding: 0; }
     .menu #logo {
       margin: 0;
-      padding: 1em 1.2em;
+      padding: 1em 0em;
       font-weight: bold; }
     .menu ul {
       max-height: 0;
@@ -66,10 +66,12 @@ body {
     .menu li {
       visibility: hidden;
       display: block;
-      padding: 0.2em 0.6em;
+      padding: 0.2em 0;
       border: none;
       margin: 0;
       border-top: 1px solid #ddd; }
+      .menu li a {
+        padding: .3em 0em; }
     .menu .navbar-handle {
       display: block; }
 
@@ -121,7 +123,7 @@ body {
   Content
 */
 #content {
-  padding: 4em 0 0 0; }
+  padding-top: 4em; }
 
 #main-banner {
   text-align: center; }
@@ -135,6 +137,17 @@ body {
   margin: 1em 0;
   padding: 4em 0 0 0; }
 
+/*
+  Home Page
+*/
+.github-feed-header {
+  width: 100%; }
+
+@media (max-width: 900px) {
+  .github-feed-header h5 {
+    float: none; }
+  .github-feed-header .github-link {
+    float: left; } }
 /*
   Projects Page
 */
