--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,11 @@
+<footer class="container">
+    <hr />
+    <p>
+        Clinton Andrews <br />
+        Web Developer <br />
+        candrews800@gmail.com
+    </p>
+</footer>
+
 </body>
 </html>
