--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -4,7 +4,7 @@ layout: default
 
 <section id="content" class="container">
     <div class="row">
-        <div class="offset-by-two eight columns">
+        <div class="twelve columns">
 
             {{ content }}
 
