project css fix

--- a/css/main.css
+++ b/css/main.css
@@ -161,6 +161,10 @@ footer {
 /*
   Projects Page
 */
+#project-list .project {
+  border-bottom: 1px solid #eee;
+  margin-bottom: 2em; }
+
 /*
   Resume Page
 */
