--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,3 +9,6 @@
 
 </body>
 </html>
+<link rel="stylesheet" href="{{ site.baseurl }}/css/style.min.css">
+<script src="{{ site.baseurl }}/js/vendor/modernizr-2.8.3.min.js"></script>
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
