--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- Place favicon.ico in the root directory -->
-
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/style.min.css">
 
 </head>
 <body>
