fixes to projects styling

--- a/css/style.css
+++ b/css/style.css
@@ -1102,6 +1102,8 @@ footer {
     #project-list .project .project-images img {
       width: 100%;
       height: auto; }
+  #project-list .project:last-child {
+    border-bottom: 0; }
 
 /*
   Resume Page
