Update portfolio. Begin to add musings section.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,7 @@
     <hr />
     <p>
         Clinton Andrews <br />
-        Web Developer <br />
-        candrews800@gmail.com
+        <a href="{{ site.baseurl }}/contact.html">Contact</a>
     </p>
 </footer>
 
