--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,9 +28,7 @@
         <ul>
             <li{% if page.url == '/index.html' %} class="active" {% endif %}><a href="{{ site.baseurl }}/">Home</a></li>
             <li{% if page.url == '/projects.html' %} class="active" {% endif %}><a href="{{ site.baseurl }}/projects.html">Projects</a></li>
-            <li{% if page.url == '/arcade.html' %} class="active" {% endif %}><a href="{{ site.baseurl }}/arcade.html">Arcade</a></li>
-            <!--<li{% if page.url == '/blog.html' %} class="active" {% endif %}><a href="{{ site.baseurl }}/blog.html">Blog</a></li>-->
-            <li{% if page.url == '/contact.html' %} class="active" {% endif %}><a href="{{ site.baseurl }}/contact.html">Contact</a></li>
+            <!--<li{% if page.url == '/musings.html' %} class="active" {% endif %}><a href="{{ site.baseurl }}/musings.html">Musings</a></li>-->
         </ul>
 
         <label for="navbar-checkbox" class="navbar-handle"></label>
