--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,7 +26,7 @@
                 <div class="twelve columns">
         <a href="{{ site.baseurl }}/" id="logo">Clinton Andrews</a>
         <ul>
-            <li{% if page.url == '/index.html' %} class="active" {% endif %}><a href="{{ site.baseurl }}/">Home</a></li>
+            <li{% if page.url == '/' %} class="active" {% endif %}><a href="{{ site.baseurl }}/">Home</a></li>
             <li{% if page.url == '/projects.html' %} class="active" {% endif %}><a href="{{ site.baseurl }}/projects.html">Projects</a></li>
             <!--<li{% if page.url == '/musings.html' %} class="active" {% endif %}><a href="{{ site.baseurl }}/musings.html">Musings</a></li>-->
         </ul>
