--- a/css/main.css
+++ b/css/main.css
@@ -161,16 +161,16 @@ footer {
 /*
   Projects Page
 */
-#project-list .project {
+.article-list article {
   border-bottom: 1px solid #eee;
   margin-bottom: 2em; }
-  #project-list .project .project-images {
+  .article-list article .article-images {
     width: 100%;
     border: 1px solid #333; }
-    #project-list .project .project-images img {
+    .article-list article .article-images img {
       width: 100%;
       height: auto; }
-  #project-list .project:last-child {
+  .article-list article:last-child {
     border-bottom: 0; }
 
 /*
