Fix for when projects page is active

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,8 +27,7 @@
         <a href="{{ site.baseurl }}/" id="logo">Clinton Andrews</a>
         <ul>
             <li{% if page.url == '/' %} class="active" {% endif %}><a href="{{ site.baseurl }}/">Home</a></li>
-            <li{% if page.url == '/projects.html' %} class="active" {% endif %}><a href="{{ site.baseurl }}/projects">Projects</a></li>
-            <!--<li{% if page.url == '/musings.html' %} class="active" {% endif %}><a href="{{ site.baseurl }}/musings">Musings</a></li>-->
+            <li{% if page.url == '/projects/' %} class="active" {% endif %}><a href="{{ site.baseurl }}/projects">Projects</a></li>
         </ul>
 
         <label for="navbar-checkbox" class="navbar-handle"></label>
