--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <hr />
     <p>
         Clinton Andrews <br />
-        <a href="{{ site.baseurl }}/contact.html">Contact</a>
+        <a href="mailto:candrews800@gmail.com">candrews800@gmail.com</a>
     </p>
 </footer>
 
