--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,6 +27,7 @@
         <a href="{{ site.baseurl }}/" id="logo">Clinton Andrews</a>
         <ul>
             <li{% if page.url == '/' %} class="active" {% endif %}><a href="{{ site.baseurl }}/">Home</a></li>
+            <li{% if page.url == '/resume/' %} class="active" {% endif %}><a href="{{ site.baseurl }}/resume">Resume</a></li>
             <li{% if page.url == '/projects/' %} class="active" {% endif %}><a href="{{ site.baseurl }}/projects">Projects</a></li>
         </ul>
 
